# CAN-MCP

./: .gitignore  Analize-AI.md  CHANGELOG.md  CHANGELOG.uk.md  CODIMENSION-EVO.md  CONTRIBUTING.md  CONTRIBUTING.uk.md  ChangeLog  FORK.md  README.md  README.uk.md  TODO_FIXME.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/: mcp.json.example
.cursor/rules/: workspace-isolation.mdc
.github/workflows/: ci-legacy-ui.yml  ci.yml
.omx/context/: codimension-etapa12-20260705T160300Z.md  codimension-etapa13-20260705T165600Z.md  (+12 more)
Carantine/: README.md
codimension-vscode/: README.md  README.uk.md  package-lock.json  package.json  tsconfig.json
codimension_core/: README.md  README.uk.md  __init__.py  pyproject.toml
codimension_core/codimension_core/: __init__.py  analysis_cache.py  analyzer.py  astutils.py  brief_ast.py  cache.py  callgraph.py  capabilities.py  cfg.py  dependency_graph.py  disasm.py  encoding_utils.py  errors.py  explain.py  file_io.py  flow_ast.py  graph_ir.py  graph_layout.py  graph_render.py  import_diagram.py  import_isolation.py  import_isolation_worker.py  imports.py  jedi_bridge.py  parser_types.py  paths.py  project.py  reverse_index.py  summaries.py  symbol_registry.py  symbols.py  venvutils.py
codimension_core/stubs/jedi/: __init__.pyi
codimension_core/stubs/jedi/api/: project.pyi
codimension_core/stubs/radon/: complexity.pyi
codimension_mcp/: README.md  README.uk.md  __init__.py  pyproject.toml
codimension_mcp/codimension_mcp/: __init__.py  __main__.py  catalog.py  catalog_readme.py  diagrams.py  errors.py  prompts.py  resources.py  schemas.py  serializers.py  server.py  tools.py
doc/: CODIMENSION-CORE-MAP.md  LEGACY-IDE.md  LICENSE_COMPLIANCE.md  MCP-CURSOR-HOWTO.md  README.md  ROADMAP.md
scripts/: check-anti-stub.sh  check.sh  clean-ui-artifacts.sh  dev-setup.sh  generate_mcp_catalog_artifacts.py  install-cursor-mcp.sh  test-analysis.sh  verify-mcp-catalog.sh  verify-vscode.sh
tests/: conftest.py  test_astview.py  test_binfiles.py  test_brief_ast.py  test_briefmodinfocache_wrapper.py  test_codimension_core.py  test_codimension_core_analyzer.py  test_codimension_core_astutils.py  test_codimension_core_brief_ast.py  test_codimension_core_cache.py  test_codimension_core_callgraph_semantic.py  test_codimension_core_capabilities.py  test_codimension_core_dependency_import_kind.py  test_codimension_core_deps.py  test_codimension_core_disasm.py  test_codimension_core_encoding_utils.py  test_codimension_core_explain.py  test_codimension_core_file_io.py  test_codimension_core_flow_ast.py  test_codimension_core_graph_ir_contract.py  test_codimension_core_graph_ir_v2.py  test_codimension_core_graph_layout.py  test_codimension_core_graph_render.py  test_codimension_core_impact.py  test_codimension_core_import_diagram.py  test_codimension_core_imports.py  test_codimension_core_imports_concurrent.py  test_codimension_core_imports_subprocess.py  test_codimension_core_jedi_callgraph.py  test_codimension_core_paths.py  test_codimension_core_reverse_index.py  test_codimension_core_semantic_fixtures.py  test_codimension_core_summaries.py  test_codimension_core_symbol_ids.py  test_codimension_core_symbol_registry.py  test_codimension_core_usages.py  test_codimension_core_venvutils.py  test_codimension_mcp.py  test_codimension_mcp_catalog.py  test_codimension_mcp_cfg_resources.py  (+14 more)
(+81 files in other folders)
