[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can-mcp-workspace"
version = "0.0.0"
description = "CAN-MCP monorepo — codimension_core + codimension_mcp (headless analysis for AI agents)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

[project.urls]
Repository = "https://github.com/sesquicadaver/CAN-MCP"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["*.egg-info/", ".mypy_cache/", ".venv/", "codimension-vscode/node_modules/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = []
