[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codimension-core"
version = "0.3.0"
description = "Headless Python code analysis core extracted from Codimension IDE"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Codimension fork contributors" }]
dependencies = []

[project.urls]
Repository = "https://github.com/sesquicadaver/codimension"

[tool.setuptools.packages.find]
where = ["."]
include = ["codimension_core*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
