[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codimension-mcp"
version = "0.9.0"
description = "MCP server exposing Codimension code analysis to AI clients"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Codimension fork contributors" }]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Repository = "https://github.com/sesquicadaver/codimension"

[project.scripts]
codimension-mcp = "codimension_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codimension_mcp*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
